:zap: getProductByFilter :construction:Second Method findShopByCoordinates
